--- a/SmartWallet/Base.lproj/Main.storyboard
+++ b/SmartWallet/Base.lproj/Main.storyboard
@@ -71,16 +71,43 @@
                                             <segue destination="q4a-iN-KJg" kind="presentation" id="wVg-VO-eVh"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mta-fA-CFu">
+                                        <rect key="frame" x="10" y="174" width="394" height="45"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transaction in progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIE-Gy-5V1">
+                                                <rect key="frame" x="33" y="12" width="353" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="dFp-1d-L8o">
+                                                <rect key="frame" x="5" y="12.5" width="20" height="20"/>
+                                            </activityIndicatorView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="6Je-CR-cZH"/>
+                                            <constraint firstAttribute="bottom" secondItem="xIE-Gy-5V1" secondAttribute="bottom" constant="12" id="Ctl-4z-WRm"/>
+                                            <constraint firstItem="dFp-1d-L8o" firstAttribute="leading" secondItem="mta-fA-CFu" secondAttribute="leading" constant="5" id="GqP-yS-qKn"/>
+                                            <constraint firstItem="xIE-Gy-5V1" firstAttribute="leading" secondItem="dFp-1d-L8o" secondAttribute="trailing" constant="8" id="QDw-FA-IZ6"/>
+                                            <constraint firstItem="xIE-Gy-5V1" firstAttribute="top" secondItem="mta-fA-CFu" secondAttribute="top" constant="12" id="V9O-oq-LY4"/>
+                                            <constraint firstItem="dFp-1d-L8o" firstAttribute="centerY" secondItem="mta-fA-CFu" secondAttribute="centerY" id="ap4-g8-ua0"/>
+                                            <constraint firstAttribute="trailing" secondItem="xIE-Gy-5V1" secondAttribute="trailing" constant="8" id="yuH-j5-ZOr"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.58105844259999995" green="0.12855249639999999" blue="0.57453137639999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="OUH-Ui-Rxo" firstAttribute="centerX" secondItem="dsV-Y1-RrE" secondAttribute="centerX" id="6vN-Sx-QQJ"/>
                                     <constraint firstItem="iYL-mM-JIB" firstAttribute="centerX" secondItem="dsV-Y1-RrE" secondAttribute="centerX" id="AuX-oq-YEt"/>
                                     <constraint firstAttribute="height" constant="220" id="NW8-mq-kDI"/>
+                                    <constraint firstItem="mta-fA-CFu" firstAttribute="top" secondItem="iYL-mM-JIB" secondAttribute="bottom" constant="8" id="Nqz-fI-KrL"/>
+                                    <constraint firstAttribute="trailing" secondItem="mta-fA-CFu" secondAttribute="trailing" constant="10" id="OyR-c0-kyy"/>
                                     <constraint firstItem="gZU-UF-NAg" firstAttribute="top" secondItem="dsV-Y1-RrE" secondAttribute="top" constant="8" id="QZn-KZ-9oD"/>
                                     <constraint firstItem="iYL-mM-JIB" firstAttribute="top" secondItem="OUH-Ui-Rxo" secondAttribute="bottom" constant="25" id="YLZ-Wj-mUe"/>
                                     <constraint firstItem="8h2-94-2rn" firstAttribute="top" secondItem="OUH-Ui-Rxo" secondAttribute="bottom" constant="25" id="ZV1-Y9-NDc"/>
                                     <constraint firstItem="qlg-ht-AIn" firstAttribute="leading" secondItem="iYL-mM-JIB" secondAttribute="trailing" constant="40" id="a9V-oq-hBp"/>
+                                    <constraint firstItem="mta-fA-CFu" firstAttribute="leading" secondItem="dsV-Y1-RrE" secondAttribute="leading" constant="10" id="ac7-eA-mNO"/>
                                     <constraint firstItem="qlg-ht-AIn" firstAttribute="top" secondItem="OUH-Ui-Rxo" secondAttribute="bottom" constant="25" id="biQ-nt-SVN"/>
                                     <constraint firstAttribute="trailing" secondItem="gZU-UF-NAg" secondAttribute="trailing" constant="10" id="n0S-Mx-6UL"/>
                                     <constraint firstItem="OUH-Ui-Rxo" firstAttribute="top" secondItem="dsV-Y1-RrE" secondAttribute="top" constant="60" id="ohI-QJ-6P1"/>
@@ -108,11 +135,12 @@
                     <connections>
                         <outlet property="amountLabel" destination="OUH-Ui-Rxo" id="YF3-Yb-OJx"/>
                         <outlet property="contentView" destination="NHD-Ko-xJ9" id="eeF-2W-kE9"/>
+                        <outlet property="transactionInProgressView" destination="mta-fA-CFu" id="a9a-Yg-Gfh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="197" y="-12"/>
+            <point key="canvasLocation" x="195.6521739130435" y="-12.053571428571429"/>
         </scene>
         <!--Receive View Controller-->
         <scene sceneID="7Wh-uJ-q7L">
@@ -447,14 +475,14 @@ Please note that the order of the words is important.</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BalanceViewCell" id="ZZf-52-HXC" customClass="BalanceViewCell" customModule="SmartWallet" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="31"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="31.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TokenViewCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZZf-52-HXC" id="lsz-Kt-cGG">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="31"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="31.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPY-dg-jet">
-                                            <rect key="frame" x="354" y="5" width="50" height="21"/>
+                                            <rect key="frame" x="354" y="5" width="50" height="21.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="YCw-L5-UaY"/>
                                             </constraints>
@@ -463,13 +491,13 @@ Please note that the order of the words is important.</string>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZTl-tT-hIZ">
-                                            <rect key="frame" x="338.5" y="5" width="10.5" height="21"/>
+                                            <rect key="frame" x="338.5" y="5" width="10.5" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Ethereum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdI-zM-OWu">
-                                            <rect key="frame" x="10" y="5" width="323.5" height="21"/>
+                                            <rect key="frame" x="10" y="5" width="323.5" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -515,26 +543,26 @@ Please note that the order of the words is important.</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TransactionViewCell" id="VKm-ab-gMX" customClass="TransactionViewCell" customModule="SmartWallet" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="53"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="53.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VKm-ab-gMX" id="jL3-A9-Dtk">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="53"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="53.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWX-h0-9Is">
-                                            <rect key="frame" x="10" y="16" width="333" height="21"/>
+                                            <rect key="frame" x="10" y="16" width="333" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2m-7n-GXp">
-                                            <rect key="frame" x="348" y="16" width="18" height="21"/>
+                                            <rect key="frame" x="348" y="16" width="18" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-jD-tPn">
-                                            <rect key="frame" x="371" y="16" width="33" height="21"/>
+                                            <rect key="frame" x="371" y="16" width="33" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
