--- a/SmartWallet/Base.lproj/Main.storyboard
+++ b/SmartWallet/Base.lproj/Main.storyboard
@@ -10,13 +10,13 @@
         <!--Wallet View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="WalletViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WalletViewController" id="BYZ-38-t0r" customClass="WalletViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dsV-Y1-RrE">
-                                <rect key="frame" x="0.0" y="44" width="414" height="220"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 ETH" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUH-Ui-Rxo">
                                         <rect key="frame" x="87" y="60" width="240" height="41"/>
@@ -115,7 +115,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NHD-Ko-xJ9">
-                                <rect key="frame" x="0.0" y="272" width="414" height="590"/>
+                                <rect key="frame" x="0.0" y="228" width="414" height="580"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                         </subviews>
@@ -314,7 +314,7 @@
         <!--Without Wallet View Controller-->
         <scene sceneID="eyJ-aS-HBc">
             <objects>
-                <viewController id="cZb-6B-ApA" customClass="WithoutWalletViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WithoutWalletViewController" id="cZb-6B-ApA" customClass="WithoutWalletViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="v0J-iS-AqD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -472,16 +472,13 @@ Please note that the order of the words is important.</string>
             </objects>
             <point key="canvasLocation" x="196" y="-765"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Wallet Navigation View Controller-->
         <scene sceneID="mgt-wf-YvK">
             <objects>
-                <navigationController navigationBarHidden="YES" id="gCH-c2-CdX" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="gCH-c2-CdX" customClass="WalletNavigationViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uMp-Ed-WmN">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <connections>
-                        <segue destination="cZb-6B-ApA" kind="relationship" relationship="rootViewController" id="5kq-k2-tNZ"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cSv-Eo-pc8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -497,14 +494,14 @@ Please note that the order of the words is important.</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BalanceViewCell" id="ZZf-52-HXC" customClass="BalanceViewCell" customModule="SmartWallet" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="31.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="31"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TokenViewCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZZf-52-HXC" id="lsz-Kt-cGG">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="31.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="31"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPY-dg-jet">
-                                            <rect key="frame" x="354" y="5" width="50" height="21.5"/>
+                                            <rect key="frame" x="354" y="5" width="50" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="YCw-L5-UaY"/>
                                             </constraints>
@@ -513,13 +510,13 @@ Please note that the order of the words is important.</string>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZTl-tT-hIZ">
-                                            <rect key="frame" x="338.5" y="5" width="10.5" height="21.5"/>
+                                            <rect key="frame" x="338.5" y="5" width="10.5" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Ethereum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdI-zM-OWu">
-                                            <rect key="frame" x="10" y="5" width="323.5" height="21.5"/>
+                                            <rect key="frame" x="10" y="5" width="323.5" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -565,26 +562,26 @@ Please note that the order of the words is important.</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TransactionViewCell" id="VKm-ab-gMX" customClass="TransactionViewCell" customModule="SmartWallet" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="53.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="53"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VKm-ab-gMX" id="jL3-A9-Dtk">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="53.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="53"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWX-h0-9Is">
-                                            <rect key="frame" x="10" y="16" width="333" height="21.5"/>
+                                            <rect key="frame" x="10" y="16" width="333" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2m-7n-GXp">
-                                            <rect key="frame" x="348" y="16" width="18" height="21.5"/>
+                                            <rect key="frame" x="348" y="16" width="18" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-jD-tPn">
-                                            <rect key="frame" x="371" y="16" width="33" height="21.5"/>
+                                            <rect key="frame" x="371" y="16" width="33" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -775,11 +772,11 @@ Please note that the order of the words is important.</string>
             <objects>
                 <viewController id="CI7-Bq-WEo" customClass="RestoreViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UiT-d8-SNM">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paraswap" translatesAutoresizingMaskIntoConstraints="NO" id="1F1-d0-p6g">
-                                <rect key="frame" x="87" y="74" width="240" height="128"/>
+                                <rect key="frame" x="87" y="30" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="128" id="X11-zf-08t"/>
                                     <constraint firstAttribute="height" constant="128" id="nDa-on-cE8"/>
@@ -788,13 +785,13 @@ Please note that the order of the words is important.</string>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Indicate the address of the wallet you want to restore." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxq-ft-k9k">
-                                <rect key="frame" x="20" y="232" width="374" height="41"/>
+                                <rect key="frame" x="20" y="188" width="374" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fill your twelve words." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HVD-QQ-sKv">
-                                <rect key="frame" x="20" y="323" width="374" height="41"/>
+                                <rect key="frame" x="20" y="279" width="374" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="Lh0-gq-3CM"/>
                                 </constraints>
@@ -803,12 +800,12 @@ Please note that the order of the words is important.</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cih-od-cKh">
-                                <rect key="frame" x="20" y="281" width="374" height="34"/>
+                                <rect key="frame" x="20" y="237" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vlv-sZ-MJi">
-                                <rect key="frame" x="20" y="372" width="374" height="70"/>
+                                <rect key="frame" x="20" y="328" width="374" height="70"/>
                                 <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="3Ah-J5-J4Y"/>
@@ -818,7 +815,7 @@ Please note that the order of the words is important.</string>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dwo-hg-azj">
-                                <rect key="frame" x="20" y="452" width="374" height="30"/>
+                                <rect key="frame" x="20" y="408" width="374" height="30"/>
                                 <state key="normal" title="Restore"/>
                                 <connections>
                                     <action selector="RestoreAction:" destination="CI7-Bq-WEo" eventType="touchUpInside" id="wWR-4U-ogb"/>
@@ -898,6 +895,6 @@ Please note that the order of the words is important.</string>
     <inferredMetricsTieBreakers>
         <segue reference="i2B-Cl-1zb"/>
         <segue reference="wVg-VO-eVh"/>
-        <segue reference="F6B-Po-DpZ"/>
+        <segue reference="2Ej-jj-aeC"/>
     </inferredMetricsTieBreakers>
 </document>
