--- a/SmartWallet/Base.lproj/LaunchScreen.storyboard
+++ b/SmartWallet/Base.lproj/LaunchScreen.storyboard
@@ -15,18 +15,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paraswap" translatesAutoresizingMaskIntoConstraints="NO" id="hSm-6I-CvX">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="f7G-6w-hDU"/>
-                                    <constraint firstAttribute="width" secondItem="hSm-6I-CvX" secondAttribute="height" multiplier="15:8" id="vtv-aJ-zZP"/>
-                                </constraints>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Easy wallet, easy money" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DdV-g1-9N0">
+                                <rect key="frame" x="62" y="431" width="290.5" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Walloo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHH-y2-lpc">
+                                <rect key="frame" x="20" y="335" width="374" height="91"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="76"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.13725490196078433" green="0.17254901960784313" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hSm-6I-CvX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cir-yk-uED"/>
-                            <constraint firstItem="hSm-6I-CvX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dwi-HC-LeC"/>
+                            <constraint firstItem="DdV-g1-9N0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3fy-bI-BKo"/>
+                            <constraint firstItem="sHH-y2-lpc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="71b-pZ-B8w"/>
+                            <constraint firstItem="DdV-g1-9N0" firstAttribute="top" secondItem="sHH-y2-lpc" secondAttribute="bottom" constant="5" id="MK5-Yw-2qg"/>
+                            <constraint firstItem="DdV-g1-9N0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="XpZ-TK-qqL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sHH-y2-lpc" secondAttribute="trailing" constant="20" id="oFe-fm-G7b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -36,7 +45,4 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="paraswap" width="400" height="78.333335876464844"/>
-    </resources>
 </document>
